public_html/static/css/style.css
/* ... */
.pricingQuick .priceBox .annually1{
  border-radius: 0;
  background-color: #e0f0ff;
  border: 1px solid #48aaff;
}
.pricingQuick .priceBox .period{
  font-size: 1rem;
}
.pricingQuick .priceBox .period span{
}
.pricingQuick .priceBox .price{
  color: #016FF9;
  font-size: 3em;
  font-weight: 700;
}
.pricingQuick .annually .price{
}
.pricingQuick .priceBox .unit{
  font-size: 1rem;
}
.pricingQuick a {
  border: 1px solid #9dd1ff;
  border-radius: 1em;
  color: #348EFE;
  display: inline-block;
  margin: 2em 0;
  padding: 1.5em 3em;
  text-decoration: none;
  transition: all 150ms ease-in-out;
}

.pricingQuick a:hover,
.pricingQuick a:focus {
  background-color: #e0f0ff;
}

.pricingQuick a.trial {
  background-color: #48aaff;
  color: #fff;
}

.pricingQuick a.trial:hover,
.pricingQuick a.trial:active {
  background-color: #269aff;
}
/* pricingTable*/
.pricingTable{
  font-size: 1.2em;
}
.tbl1.pricingTable th, .tbl1.pricingTable td{
  text-align: center;
}
.ltr .pricingTable tr > *:first-child{
  text-align: left;
}
.rtl .pricingTable tr > *:first-child{
  text-align: right;
}


.guaranteeBox{
  min-height: 400px;
  width: 100%;
  position: relative;
  background: #555;
  background: -moz-linear-gradient(top, #555 0%, #111 100%);
  background: -webkit-linear-gradient(top, #555 0%,#111 100%);
  background: linear-gradient(to bottom, #555 0%,#111 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#555', endColorstr='#111',GradientType=0 );
  margin: 2em 0 4em;
  color: #fff;
  font-size: 1.4em;
}
.guaranteeBox .text{
  padding-top: 80px;
}
.guaranteeBox .text h2{
  font-size: 4em;
  font-weight: 700;
}
.guaranteeBox .text h3{
  font-size: 1.5em;
  margin-bottom: 1em;
}
.guaranteeBox .preview{
  max-height: 300px;
  display: block;
  margin: 50px auto;
}

/*logo page badge*/
.logoEffect{
  height: 400px;
  position: relative;
  background-color: #0a0118;
}
.logoEffect .shadow{
  position: absolute;
  z-index: 2;
  height: 262px;
  width: 263px;
  top: 71px;
  right: 0;
  left:0;
  padding-left: 2px;
  margin: 0 auto;
}
.logoEffect .logo{
  position: absolute;
  height: 260px;
  width: 260px;
  z-index: 1;
  top: 72px;
  right: 0;
  left: 0;
  padding-left: 1px;
  margin: 0 auto;
}
.logoEffect video{
  height: 100%;
  display: block;
  margin:0 auto;
}



/*vcard*/
.vcard{font-style:normal;}
.vcard .adr{padding:1em 0}
.vcard .adr div, .vcard .adr span, .vcard .email, .vcard .tel{display:block;padding:0.5em}
.vcard .adr span{display:inline-block;}





[data-page="homepage"] #tfooter .link_home{display:none;}





@media all and (min-width: 768px) and (max-width: 959px) {
  .page-title{padding:7em 0;}
  .pricingQuick .col2{border: none!important;}
}


@media (max-width: 767px) {
  .page-title{padding:5em 0;}
  .page-title h2{padding: 0 5%;}
  #tfooter nav.s12{margin-bottom:2em;}
  .pc{padding:2em 0;}
  .pc ul.list{margin: 2em 2%;}

  #landing{min-height:350px;height: 400px;}
  #landing .title{padding-top:20px;position:relative;}
  #landing .title .h2{font-size:3em;min-height:3em;}
  #roadmap{display:none}
  #quote .title{right: 0;left: 0;font-size: 1.5em}
  #tfooter .middle nav a{display:inline-block;background-color:rgba(0,0,0,0.1);border-radius:0.25rem;margin: 0 0 5px;padding: 1rem 1em}
  #tfooter .top a{display:inline-block;background-color:rgba(0,0,0,0.1);border-radius:0.25rem;margin: 0 2px 5px!important;padding: 1rem 1em}

  .pricingQuick .box > .c3{
    border: none!important;
    border-bottom: 1px solid #e0f0ff!important;
    padding: 2em 0;
  }
  .pricingQuick h3{
    min-height: initial;
  }
  .pricingQuick ul{
    margin: 0;
  }
  .guaranteeBox .text{text-align: center;padding-top:50px;}

}






















/*style for print*/
@page {
  margin:0.2cm;
}

@media print {
  html{overflow: auto}
  body{overflow: auto;-webkit-print-color-adjust:exact;print-color-adjust:exact;}
  #main{overflow: auto;}
  #content{overflow: auto;}
  .siftal #content .tbox{display: none}
  .tbl1{color:#000!important;font-size:1.2em}
  .tbl1 thead{background-color:#ddd;color:#000}
  .tbl1 tfoot{background-color:#ddd;font-size:1.1em}

  body.siftal #main #content{padding:0;}
  .factor.printArea{color:#000!important;}

}

